hledger/test/errors/csviftablevaluecount.csv.rules
# if table where some records have wrong number of values.
if,date,description
two,val1,val2
one,val1
